[gd_scene load_steps=11 format=3 uid="uid://c3jo73wxyv6ux"]

[ext_resource type="Script" path="res://common/ui/fields/portrait_option/portrait_option.gd" id="1_0c6eg"]
[ext_resource type="Texture2D" uid="uid://dixramdai4iq4" path="res://ui/assets/icons/pen.svg" id="2_18nk3"]
[ext_resource type="Texture2D" uid="uid://bogfuvhttgn1v" path="res://ui/assets/icons/star.svg" id="3_p62s6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1kg51"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4h5pv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sg0f6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sqn18"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1bt6u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ecrk5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_141h7"]

[node name="PortraitOption" type="Panel"]
custom_minimum_size = Vector2(0, 35)
anchors_preset = -1
anchor_right = 0.096
anchor_bottom = 0.036
offset_right = -0.600006
offset_bottom = 0.439999
size_flags_horizontal = 3
script = ExtResource("1_0c6eg")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LineEdit" type="LineEdit" parent="MarginContainer/HBoxContainer/Control/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_uneditable_color = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_1kg51")
text = "default"
flat = true
caret_blink = true
text_direction = 1

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/focus = SubResource("StyleBoxEmpty_4h5pv")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_sg0f6")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_sqn18")
theme_override_styles/hover = SubResource("StyleBoxEmpty_1bt6u")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ecrk5")
theme_override_styles/normal = SubResource("StyleBoxEmpty_141h7")
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="btnEdit" type="TextureButton" parent="MarginContainer/HBoxContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
texture_normal = ExtResource("2_18nk3")
ignore_texture_size = true
stretch_mode = 5

[node name="btnStar" type="TextureButton" parent="MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_p62s6")
stretch_mode = 5

[connection signal="focus_exited" from="MarginContainer/HBoxContainer/Control/HBoxContainer/LineEdit" to="." method="_on_line_edit_focus_exited"]
[connection signal="text_changed" from="MarginContainer/HBoxContainer/Control/HBoxContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="MarginContainer/HBoxContainer/Control/HBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="gui_input" from="MarginContainer/HBoxContainer/Control/Button" to="." method="_on_button_gui_input"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Control/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/HBoxContainer/btnEdit" to="." method="_on_btn_edit_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/HBoxContainer/btnStar" to="." method="_on_btn_star_pressed"]
